[package]
name = "apsakd"
description = "apsaK full node daemon"
keywords = ["apsak", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "apsakd_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
apsak-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

apsak-addresses.workspace = true
apsak-addressmanager.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-consensus.workspace = true
apsak-consensusmanager.workspace = true
apsak-core.workspace = true
apsak-database.workspace = true
apsak-grpc-server.workspace = true
apsak-hashes.workspace = true
apsak-index-processor.workspace = true
apsak-mining.workspace = true
apsak-notify.workspace = true
apsak-p2p-flows.workspace = true
apsak-perf-monitor.workspace = true
apsak-rpc-core.workspace = true
apsak-rpc-service.workspace = true
apsak-txscript.workspace = true
apsak-utils.workspace = true
apsak-utils-tower.workspace = true
apsak-utxoindex.workspace = true
apsak-wrpc-server.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
serde.workspace = true
dirs.workspace = true
futures-util.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "apsak-alloc/heap"]
devnet-prealloc = ["apsak-consensus/devnet-prealloc"]
