[package]
name = "apsak-mining"
description = "apsaK mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-addresses.workspace = true
apsak-consensus-core.workspace = true
apsak-consensusmanager.workspace = true
apsak-core.workspace = true
apsak-hashes.workspace = true
apsak-mining-errors.workspace = true
apsak-muhash.workspace = true
apsak-txscript.workspace = true
apsak-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

[dev-dependencies]
apsak-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false
