[package]
name = "rothschild"
description = "apsaK Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-addresses.workspace = true
apsak-consensus-core.workspace = true
apsak-core.workspace = true
apsak-grpc-client.workspace = true
apsak-notify.workspace = true
apsak-rpc-core.workspace = true
apsak-txscript.workspace = true
apsak-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
