[package]
name = "simpa"
description = "apsaK Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-consensus.workspace = true
apsak-core.workspace = true
apsak-database.workspace = true
apsak-hashes.workspace = true
apsak-perf-monitor.workspace = true
apsak-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "apsak-alloc/heap"]
