[package]
name = "apsak-wasm"
description = "APSAK WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
apsak-addresses.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-wasm.workspace = true
apsak-core.workspace = true
apsak-math.workspace = true
apsak-pow.workspace = true
apsak-rpc-core.workspace = true
apsak-utils.workspace = true
apsak-wasm-core.workspace = true
apsak-wallet-core.workspace = true
apsak-wallet-keys.workspace = true
apsak-wrpc-client.workspace = true
apsak-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features] 
wasm32-sdk = [
    "apsak-wallet-core/wasm32-sdk",
    "apsak-pow/wasm32-sdk",
]
wasm32-core = [
    "apsak-wallet-core/wasm32-core",
    "apsak-pow/wasm32-sdk",
]
wasm32-rpc = [
    "apsak-consensus-core/wasm32-sdk",
    "apsak-consensus-wasm/wasm32-sdk",
    "apsak-wrpc-client/wasm32-sdk",
    "apsak-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/apsak" },
    { target = "web", out-dir = "web/apsak" }
]
folder = "setup"
