[package]
name = "apsak-connectionmanager"
description = "apsaK connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
apsak-addressmanager.workspace = true
apsak-core.workspace = true
apsak-p2p-lib.workspace = true
apsak-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true