[package]
name = "apsak-consensusmanager"
description = "apsaK consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-core.workspace = true
apsak-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true
