[package]
name = "apsak-consensus-notify"
description = "apsaK consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
apsak-consensus-core.workspace = true
apsak-core.workspace = true
apsak-hashes.workspace = true
apsak-notify.workspace = true
apsak-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
