[package]
name = "apsak-index-processor"
description = "apsaK index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-consensusmanager.workspace = true
apsak-core.workspace = true
apsak-database.workspace = true
apsak-hashes.workspace = true
apsak-index-core.workspace = true
apsak-notify.workspace = true
apsak-utils.workspace = true
apsak-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
apsak-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}