[package]
name = "apsak-utxoindex"
description = "apsaK UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
apsak-consensus-core.workspace = true
apsak-consensusmanager.workspace = true
apsak-core.workspace = true
apsak-database.workspace = true
apsak-hashes.workspace = true
apsak-index-core.workspace = true
apsak-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
apsak-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }
