[package]
name = "apsak-p2p-flows"
description = "apsaK p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-core.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-p2p-lib.workspace = true
apsak-utils.workspace = true
apsak-utils-tower.workspace = true
apsak-hashes.workspace = true
apsak-muhash.workspace = true
apsak-connectionmanager.workspace = true
apsak-addressmanager.workspace = true
apsak-consensusmanager.workspace = true
apsak-mining.workspace = true
apsak-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true
