[package]
name = "apsak-rpc-core"
description = "apsaK RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "apsak-consensus-client/wasm32-sdk",
    "apsak-consensus-wasm/wasm32-sdk"
]

[dependencies]
apsak-addresses.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-client.workspace = true
apsak-consensus-notify.workspace = true
apsak-consensus-wasm.workspace = true
apsak-core.workspace = true
apsak-hashes.workspace = true
apsak-index-core.workspace = true
apsak-math.workspace = true
apsak-mining-errors.workspace = true
apsak-notify.workspace = true
apsak-txscript.workspace = true
apsak-utils.workspace = true
apsak-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints.clippy]
empty_docs = "allow"
