[package]
name = "apsak-rpc-service"
description = "apsaK RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-addresses.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-consensusmanager.workspace = true
apsak-core.workspace = true
apsak-hashes.workspace = true
apsak-index-core.workspace = true
apsak-math.workspace = true
apsak-mining.workspace = true
apsak-notify.workspace = true
apsak-p2p-flows.workspace = true
apsak-p2p-lib.workspace = true
apsak-perf-monitor.workspace = true
apsak-rpc-core.workspace = true
apsak-txscript.workspace = true
apsak-utils.workspace = true
apsak-utils-tower.workspace = true
apsak-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
