[package]
name = "apsak-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

apsak-addresses.workspace = true
apsak-bip32.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-notify.workspace = true
apsak-consensus.workspace = true
apsak-consensusmanager.workspace = true
apsak-core.workspace = true
apsak-database.workspace = true
apsak-grpc-client.workspace = true
apsak-grpc-core.workspace = true
apsak-grpc-server.workspace = true
apsak-hashes.workspace = true
apsak-index-processor.workspace = true
apsak-math.workspace = true
apsak-merkle.workspace = true
apsak-muhash.workspace = true
apsak-notify.workspace = true
apsak-pow.workspace = true
apsak-rpc-core.workspace = true
apsak-rpc-service.workspace = true
apsak-txscript.workspace = true
apsak-utils.workspace = true
apsak-utxoindex.workspace = true
apsak-wrpc-server.workspace = true
apsakd.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
apsak-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["apsakd/devnet-prealloc"]
