[package]
name = "apsak-grpc-server"
description = "apsaK gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsak-consensus-core.workspace = true
apsak-core.workspace = true
apsak-grpc-core.workspace = true
apsak-notify.workspace = true
apsak-rpc-core.workspace = true
apsak-rpc-macros.workspace = true
apsak-rpc-service.workspace = true
apsak-utils-tower.workspace = true
apsak-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true

[dev-dependencies]
apsak-grpc-client.workspace = true
