[package]
name = "apsak-wrpc-wasm"
description = "apsaK wRPC WASM client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = ["apsak-wrpc-client/wasm32-sdk"]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash.workspace = true
async-std.workspace = true
cfg-if.workspace = true
apsak-addresses.workspace = true
apsak-consensus-core.workspace = true
apsak-consensus-client.workspace = true
apsak-consensus-wasm.workspace = true
apsak-notify.workspace = true
apsak-wrpc-client.workspace = true
apsak-rpc-core.workspace = true
apsak-rpc-macros.workspace = true
apsak-wasm-core.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-wasm.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
workflow-core.workspace = true
futures.workspace = true

[lints.clippy]
empty_docs = "allow"
