[package]
name = "apsak-wrpc-example-subscriber"
description = "apsaK wRPC subscription example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
apsak-consensus-core.workspace = true
apsak-rpc-core.workspace = true
apsak-wrpc-client.workspace = true
apsak-notify.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
ctrlc.workspace = true
